Fix missing color value Related to AAC-712

--- a/Resources/Private/Scss/elements/button.scss
+++ b/Resources/Private/Scss/elements/button.scss
@@ -8,6 +8,7 @@
 
 @mixin button-color--brand() {
     background-color: $brand;
+    color: $white;
 
     svg {
         fill: $white;
